Revise to Java as minimum